# ONet_UDE

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
archives/training_20251208_171513/: README.md  config.json  last_metrics.pth
archives/training_20251208_172116/: README.md  checkpoint_info.json  loss_metrics.json
archives/training_20251208_175649/: README.md  checkpoint_info.json  last_config.json  last_metrics.pth  loss_metrics.json
archives/training_20251208_182114/: README.md  checkpoint_info.json  config.json  last_metrics.pth  loss_metrics.json
checkpoints/: best_cnn_model.pth  best_model.pth  last_cnn_config.json  last_cnn_metrics.pth  last_config.json  last_metrics.pth
cross_modal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: __init__.py  dataset.py  dataset_simple.py  transform.py
images/compare_results/: comparison_summary.json
nn/: cnn.py  deeponet.py
script/: archive_results.py  train.py  train_cnn.py
script/compare/: comparison.py  interpolation_utils.py  visualization_comparison.py
script/test/: test_cnn_crop.py  test_dataset.py  test_extrapolation.py  test_query_flexibility.py
test/: test_dataset.py
utils/: data_utils.py  train_utils.py  visualization.py
